# sellora

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .render-deploy-trigger-sprint-8e  .sprint-8e-runtime-trigger  Dockerfile  alembic.ini  pyproject.toml  render-start.sh  requirements.txt  scripts_seed.py  scripts_seed_demo.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/deploy-triggers/: sprint-8e-diagnostic-runtime-20260716.txt  sprint-8e-post-provider-restart-20260716.txt
backend/scripts/: sprint_8f_migration_gate.py  verify_alembic_revision.py  verify_sprint_8b_routes.py
backend/tests/: conftest.py  test_advertising.py  test_analytics.py  test_api_route_contracts.py  test_auth.py  test_crm_completion.py  test_direct_customer_automation.py  test_excluded_order_profit_migration.py  test_feedback.py  test_finance_adjustments.py  test_finance_summary.py  test_health_runtime_identity.py  test_import_center.py  test_lead_workflow.py  test_meta_ads_connections.py  test_meta_ads_external_identity_migration.py  test_meta_ads_fake_client.py  test_meta_ads_live_oauth_foundation.py  test_meta_ads_live_read_only_client.py  test_meta_ads_oauth_mock.py  test_meta_ads_oauth_mock_routes.py  test_meta_ads_read_only_discovery.py  test_meta_ads_staging_validation.py  test_meta_ads_sync_preview.py  test_meta_ads_sync_preview_foundation.py  test_meta_ads_sync_simulation.py  test_meta_ads_token_crypto.py  test_meta_ads_token_safety.py  test_meta_instagram_foundation.py  test_migration_role_portability.py  test_nova_poshta.py  (+16 more)
(+874 files in other folders)
